syntax = "proto3";
package gokvm;

message Team {
    int32 id = 1;
    string name = 2;
    string abbreviation = 3;
}

message GameScoreboard {
    int32 id = 1;
    int32 score = 2;
    Team home_team = 3;
    Team away_team = 4;
    string start_time = 5;
    string date = 6;
}

message GetTeamsRequest{}
message GetTeamsResponse {
    repeated Team teams = 1;
}

message GetTeamByNameRequest{
    string name = 1;
}
message GetTeamByNameResponse{
    Team team = 1;
}

message GetGameScoreboardsRequest {
    string date = 1;
}
message GetGameScoreboardsResponse {
    repeated GameScoreboard scoreboards = 1;
}

service Nhl {
    rpc GetTeams(GetTeamsRequest) returns (GetTeamsResponse);
    rpc GetTeamByName(GetTeamByNameRequest) returns (GetTeamByNameResponse);
    rpc GetGameScoreboards(GetGameScoreboardsRequest) returns (GetGameScoreboardsResponse);
}